fixed home overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .App {
   width: 100%;
   min-height: 100%;
+  background-color: red;
   box-sizing: border-box;
   padding-bottom: 5px;
+}
+
+.fixedHeight {
+  height: 100%;
 }
