--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,6 +1,7 @@
 .home {
-  height: calc(100vh - 120px);
+  height: calc(100% - 120px);
   width: 100%;
+  background-color: chartreuse;
 }
 
 .homeContent {
